--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
 {% block content %}
     <p>Current Time: {{ current_time }}</p>
+    <p>User Agent: {{ user_agent }}</p>
 {% endblock %}
