Working on Lambda function and changes Github Action

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,4 +2,5 @@
 {% block content %}
     <p>Current Time: {{ current_time }}</p>
     <p>User Agent: {{ user_agent }}</p>
+    <p class="lead">Hit refresh to update the time (and send a new trace to Datadog)</p>
 {% endblock %}
