New jokes, better navigation.

--- a/templates/chuckjoke.html
+++ b/templates/chuckjoke.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
+    <img src="{{ chuck_image }}" alt="Chuck Norris">
     <p>Current Time: {{ current_time }}</p>
     <p>Chuck Joke: {{ joke_text }}</p>
 <p class="lead">Hit refresh to get a new Chuck joke (and send a new trace to Datadog)</p>
