--- a/templates/layout.html
+++ b/templates/layout.html
@@ -33,7 +33,7 @@
           {% block content %}
           {% endblock %}
         <p class="lead">
-          <a href="#" class="btn btn-lg btn-secondary">Build Something Here</a>
+          <a href="/chuckjoke" class="btn btn-lg btn-secondary">Chuck Jokes</a>
         </p>
       </main>
 
