--- a/templates/state_tax.html
+++ b/templates/state_tax.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% block title %}{{ super() }}Database Functions{% endblock %}
 {% block content %}
 <article>
   <div class="article-settings">
