--- a/templates/chuckjoke.html
+++ b/templates/chuckjoke.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% block title %}{{ super() }}Lambda Function{% endblock %}
 {% block content %}
 <article>
   <div class="article-settings">
