--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% block title %}{{ super() }}Index Page{% endblock %}
 {% block content %}
 <article>
   <div class="article-settings">
@@ -9,6 +10,6 @@
 </article>
 
 <aside>
-  <p>Put notes in here</p>
+  <p>Title of the page should be Index Page</p>
 </aside>
 {% endblock %}
