--- a/templates/layout.html
+++ b/templates/layout.html
@@ -33,13 +33,14 @@
 
     <div class="wrapper full-height">
       <header>Curryware Datadog Exercises</header>
-        <nav>
-          <ul>
-          <li><a class="nav-link active" href="/chuckjoke">Lambda Function</a></li>
-          <li><a class="nav-link active" href="/logging_functions">Logging Functions</a></li>
-          <li><a class="nav-link active" href="/database_functions">Database Functions</a></li>
-          <li><a class="nav-link active" href="/random_error">Random Error Page</a></li>
-          <li><a class="nav_line active" href="/forced_error">Forced Error Page</a></li>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light wrapper center">
+          <ul class="navbar-nav">
+            <li class="nav-item active"><a class="nav-link active" href="/chuckjoke">Lambda Function</a></li>
+            <li class="nav-item"><a class="nav-link active" href="/logging_functions">Logging Functions</a></li>
+            <li class="nav-item"><a class="nav-link active" href="/database_functions">Database Functions</a></li>
+            <li class="nav-item"><a class="nav-link active" href="/random_error">Random Error Page</a></li>
+            <li class="nav-item"><a class="nav_link active" href="/forced_error">Forced Error Page</a></li>
+            <li class="nav-item"><a class="nav_link active" href="/azure_container_app">Azure Container</a></li>
           </ul>
         </nav>
         {% block content %}
@@ -67,6 +68,5 @@
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
     <script src="../static/dist/js/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-
 
 </body></html>
