--- a/templates/layout.html
+++ b/templates/layout.html
@@ -33,7 +33,7 @@
 
     <div class="wrapper full-height">
       <header>Curryware Datadog Exercises</header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light wrapper center">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light center">
           <ul class="navbar-nav">
             <li class="nav-item active"><a class="nav-link active" href="/chuckjoke">Lambda Function</a></li>
             <li class="nav-item"><a class="nav-link active" href="/logging_functions">Logging Functions</a></li>
